fix chrome overlapping weirdness

--- a/gramdictru/wwwroot/css/site.css
+++ b/gramdictru/wwwroot/css/site.css
@@ -319,6 +319,7 @@ table .left-aligned td {
 
 .result-entry {
     display: flex;
+    break-inside: avoid;
 }
 
 .lemma {
